css/styles.css
/* ... */
.header__logo {
  height: 2.2rem;
}

.header__nav-list {
  display: flex;
  justify-content: center;
  gap: 4.8rem;
  list-style: none;
}

.header__nav-link:link,
.header__nav-link:visited {
  color: var(--text-color-heading);
  font-size: var(--font-size--regular);
  font-weight: 600;
  transition: all var(--transition-speed);
}

.header__nav-link:hover,
.header__nav-link:active {
  color: var(--primary-color);
}

.header__nav-link.header__nav-link--cta {
  color: #fff;
  background-color: var(--primary-color);
  border-radius: 9px;
  padding: 1.2rem 2.4rem;
}

.header__nav-link.header__nav-link--cta:hover,
.header__nav-link.header__nav-link--cta:active {
  background-color: var(--primary-color-darken-10);
}

/* MOBILE NAV */
.header__nav-btn {
  height: 4.8rem;
  width: 4.8rem;
  display: none;
  border: none;
  background: none;
  cursor: pointer;
  z-index: 9999;
}

.header__nav-icon {
  width: 100%;
  height: 100%;
  color: var(--text-color-heading)
}

.header__nav-icon[name="menu-outline"] {
}

.header__nav-icon[name="close-outline"] {
  display: none;
}

/* FIXED NAVIGATION */
.fixed .header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 8rem;
  padding-top: 0;
  padding-bottom: 0;
  background-color: rgba(255, 255, 255,0.97);
  z-index: 999;
  box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.03);
}

.fixed .hero__section {
  /* It needs to be the same as height of the header */
  margin-top: 9.6rem;
}

/* HERO */

.hero__section {
  background-color: var(--bg-color);
  padding-bottom: 8rem;
}

.hero__container {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  max-width: 130rem;
  padding: 0 3.2rem;
  align-items: center;
}

.hero__description {
  font-size: 2rem;
  line-height: 1.5;
  margin-bottom: var(--section-gap--md);
}

.hero__btns {
  display: flex;
  gap: 1.6rem;
}

.hero__delivered {
  margin-top: 8rem;
  display: flex;
  align-items: center;
  gap: 3.2rem;
}

.hero__delivered-imgs {
  display: flex;
}

.hero__delivered-imgs img {
  width: 4.8rem;
  height: 4.8rem;
  margin-right: -1.2rem;

  border-radius: 50%;
  border: 3px solid var(--bg-color);
}

.hero__delivered-text {
  font-size: var(--font-size--regular);
  font-weight: 600;
}

.hero__delivered-text span {
  color: var(--primary-color-darken-10);
}

.hero__img {
  max-width: 100%;
}

/* FEATURED */

.featured__section {
  padding: var(--section-gap--md) 0;
}

.featured__heading--subheading {
  text-align: center;
  margin-bottom: 2.4rem;
}

.featured__logos {
  display: flex;
  justify-content: space-around;
  align-items: center;
  gap: 3.2rem;
}

.featured__logos img {
  height: 3.2rem;
  filter: brightness(0);
  opacity: 50%;
}

/* HOW IT WORKS */

.how__section {
  padding: 9.6rem 0;
}

.how__number {
  font-size: 8.6rem;
  font-weight: 600;
  color: #ccc;
  margin-bottom: 1.6rem;
}

.how__text {
  font-size: var(--font-size--regular);
  line-height: 1.8;
}

.how__img-box {
  display: flex;
  justify-content: center;
  position: relative;
}

.how__img-box::before,
.how__img-box::after {
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  border-radius: 50%;
  transform: translate(-50%, -50%);
}

.how__img-box::before {
  background-color: var(--primary-color-lighten-90);
  width: 70%;
  /* these percents are percents of the parents width! */
  padding-bottom: 70%;
  z-index: -2;
}

.how__img-box::after {
  background-color: var(--primary-color-lighten-80);
  width: 55%;
  /* these percents are percents of the parents width! */
  padding-bottom: 55%;
  z-index: -2;
}

.how__img {
  max-width: 38%;
}

/* MEALS SECTION */

.meals-section {
  padding: var(--section-gap--md) 0;
}

.meals-card {
  box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
  border-radius: 11px;
  overflow: hidden;
  transition: all 0.4s;
}

.meals-card:hover {
  transform: translateY(-2rem);
  box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.06);
}

.meals-card__img {
  width: 100%;
}

.meals-card__content {
  padding: 3.2rem 4.8rem;
  font-size: var(--font-size--regular);
}

.meals-card__tags {
  margin-bottom: 1.6rem;
}

.meals-card__tag {
  display: inline-block;
  font-size: 1.2rem;
  font-weight: 700;
  padding: 0.4rem 0.8rem;
  color: var(--text-color-heading);
  text-transform: uppercase;
  border-radius: 13px;
}

.meals-card__tag--vegetarian {
  background-color: #51cf66;
}

.meals-card__tag--vegan {
  background-color: #94d82d;
}

.meals-card__tag--paleo {
  background-color: #ffd43b;
}

.meals-card__title {
  font-size: 2.4rem;
  font-weight: 700;
  color: var(--text-color-heading);
  margin-bottom: 3.2rem;
}

.meals-card__attributes {
  display: flex;
  flex-direction: column;
  /* align-items: center; */
  gap: 1.6rem;
  list-style: none;
}

.meals-card__icon {
  width: 2.4rem;
  height: 2.4rem;
  color: var(--primary-color);
}

.meals-card__attribute {
  display: flex;
  align-items: center;
  gap: 1.2rem;
}

.list {
  display: flex;
  flex-direction: column;
  gap: 1.6rem;
  list-style: none;
}

.list__item {
  display: flex;
  align-items: center;
  gap: 1.2rem;
  font-size: var(--font-size--regular);
}

.list__icon {
  width: 3.2rem;
  height: 3.2rem;
  color: var(--primary-color);
}

.all-recipes {
  font-size: var(--font-size--regular);
  text-align: center;
}

.link:link,
.link:visited {
  color: var(--primary-color);
  font-weight: 500;
  border-bottom: 1px solid currentColor;
  padding-bottom: 2px;
  transition: all 0.3s;
  cursor: default;
}

.link:hover,
.link:active {
  color: var(--primary-color-darken-10);
  border-bottom: 1px solid transparent;
}

/* TESTIMONIALS SECTION */

.testimonials-section {
  display: grid;
  grid-template-columns: 1.2fr 1fr;
  gap: var(--section-gap--md);
  align-items: center;

  padding: 0 var(--section-gap--md);
  margin-bottom: var(--section-gap--md);
  background-color: var(--bg-color);
}

.testimonials-container {
  padding: 4.8rem 0;
}

.testimonials {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 4.8rem;
}
/* ... */

